data/derived/comb/progs/unify/prog2203.ml.out
Characters 110-141:
  | Cosine ex -> "cos(pi*"^ exprToString ex ^")"
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
